force-app/main/default/objects/copado__Deployment_Flow__c/copado__Deployment_Flow__c.object-meta.xml
<CustomObject>
    <label>Deployment Flow</label>
    <nameField>
        <label>Deployment Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>