force-app/main/default/objects/copado__Deployment_Flow__c/fields/copado__Active__c.field-meta.xml
<CustomField>
    <fullName>copado__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, all Branch Management features will be enabled in the Deployment Flow.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>