force-app/main/default/objects/copado__Deployment_Flow__c/fields/copado__Disable_Validations__c.field-meta.xml
<CustomField>
    <fullName>copado__Disable_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Deployment Flow Steps best practices validations will be disabled.</description>
    <label>Disable Validations</label>
    <type>Checkbox</type>
</CustomField>