force-app/main/default/objects/copado__Deployment_Flow__c/fields/copado__Main_Branch__c.field-meta.xml
<CustomField>
    <fullName>copado__Main_Branch__c</fullName>
    <description>Main branch of the selected Git Repository (e.g. master).</description>
    <label>Main Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>