force-app/main/default/objects/copado__Deployment_Flow__c/fields/copado__Manage_Branches__c.field-meta.xml
<CustomField>
    <fullName>copado__Manage_Branches__c</fullName>
    <description>Link to open the Branch and Environment Management page for the Deployment Flow.</description>
    <formula>HYPERLINK(&apos;/apex/&apos;&amp;
IF($Setup.copado__Settings__c.copado__Namespace__c=&apos;none&apos;,&apos;&apos;,
  IF(isblank($Setup.copado__Settings__c.copado__Namespace__c),&apos;copado__&apos;,$Setup.copado__Settings__c.copado__Namespace__c)
)&amp;&apos;BranchManagement?id=&apos;&amp;Id, &apos;Release Management Page&apos;, &apos;_blank&apos;)</formula>
    <label>Manage Releases</label>
    <type>Text</type>
</CustomField>