force-app/main/default/objects/copado__Deployment_Flow__c/fields/copado__Static_Code_Analysis_Settings__c.field-meta.xml
<CustomField>
    <fullName>copado__Static_Code_Analysis_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Static Code Analysis settings used whenever the analysis is run in Environments or User Stories linked to the Deployment Flow.</description>
    <label>Static Code Analysis Settings</label>
    <referenceTo>copado__Static_Code_Analysis_Settings__c</referenceTo>
    <relationshipLabel>Deployment Flows</relationshipLabel>
    <relationshipName>Deployment_Flows</relationshipName>
    <type>Lookup</type>
</CustomField>